--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container">
-    <h1>Hello world</h1>
-  </div>
+	<nav class = "navbar navbar-default"> 
+		<div class="container-fluid">
+			<div class = "navbar-header">
+			<a href="#" class = "navbar-brand"> Программирование на заказ</a> 
+			</div>
+		</div>
+	</nav>
 </body>
 </html>
