Main frame added.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-	<nav class = "navbar navbar-default"> 
+	<nav class = "navbar navbar-default" style = "margin-bottom: 0px;">
 		<div class="container-fluid">
 			<div class = "navbar-header">
 			<a href="#" class = "navbar-brand"> Программирование на заказ</a> 
 			</div>
 		</div>
 	</nav>
+	<div class = "container-fluid text-center" style = "background-color: #097fdc;">
+		<h1 style = "color: #3232b9;"> Здесь вы можете заказать выполнение контрольных, лабораторных и курсовых работ по различным предметам.</h1>
+		<input type="submit" class="btn btn-primary" value="Заказать" style = "margin-bottom: 10px;">
+	</div>
 </body>
 </html>
