Information frame added.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,43 @@
 	<nav class = "navbar navbar-default" style = "margin-bottom: 0px;">
 		<div class="container-fluid">
 			<div class = "navbar-header">
-			<a href="#" class = "navbar-brand"> Программирование на заказ</a> 
+			<a href="#" class = "navbar-brand" style = "color: #3232b9;"> Программирование на заказ</a> 
 			</div>
 		</div>
 	</nav>
 	<div class = "container-fluid text-center" style = "background-color: #097fdc;">
 		<h1 style = "color: #3232b9;"> Здесь вы можете заказать выполнение контрольных, лабораторных и курсовых работ по различным предметам.</h1>
 		<input type="submit" class="btn btn-primary" value="Заказать" style = "margin-bottom: 10px;">
+	</div>
+	<div class = "container-fluid">
+		<h1 class = "text-center" style = "color: #3232b9;"> Что мы предлагаем?</h1>
+		<div class = "row">
+			<div class = "col-md-4 col-sm-12">
+			<h1 style = "color: #3232b9;"> Предметы:</h1>
+				<ul class="list-group">
+					<li class="list-group-item">Математика</li>
+					<li class="list-group-item">Программирование</li>
+					<li class="list-group-item">Базы данных</li>
+					<li class="list-group-item"> И прочие связанные с IT</li>
+				</ul>
+			</div>
+			<div class = "col-md-4 col-sm-12">
+				<h1 style = "color: #3232b9;"> Сроки</h1>
+				<p class = "text-center">
+					В зависимости от сложности работы на выполнение заказа уйдёт от 3 до 7 дней. 
+					<br>
+					Есть так же возможность заказать срочную работу, со сроком выполнения 1 день.
+				</p>
+			</div>
+			<div class = "col-md-4 col-sm-12">
+				<h1 style = "color: #3232b9;"> Стоимость</h1>
+					<p class = "text-center">
+					В зависимости от сложности работы стоимость составит от 400р до 2000р. 
+					<br>
+					За срочные работы доплата 300р.
+				</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
