--- a/index.html
+++ b/index.html
@@ -56,5 +56,22 @@
 			</div>
 		</div>
 	</div>
+	<div class = "container-fluid">
+		<h1 class = "text-center" style = "color: #3232b9;"> Написать нам вы можете здесь:</h1>
+		<form class="form-horizontal">
+			<div class="form-group">
+				<label class="col-sm-2 control-label">Ваша почта</label>
+					<div class="col-sm-10">
+						<input type="email" class="form-control input-xs" id="email" placeholder="Ваш email">
+					</div>
+			</div>
+			<div class="form-group has-success">
+				<label for="task" class="col-sm-2 control-label">Ваша задача:</label>
+					<div class="col-sm-10">
+						<textarea class="form-control" id="FormControlTextarea1" rows="3"></textarea>
+					</div>
+			</div>
+		</form>
+	</div>
 </body>
 </html>
