--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class = "container-fluid">
 		<h1 class = "text-center" style = "color: #3232b9;"> Что мы предлагаем?</h1>
 		<div class = "row">
-			<div class = "col-md-4 col-sm-12">
+			<div class = "col-md-4 col-sm-12" style = "background-color: #ff9999">
 			<h1 style = "color: #3232b9;"> Предметы:</h1>
 				<ul class="list-group">
 					<li class="list-group-item">Математика</li>
@@ -38,7 +38,7 @@
 					<li class="list-group-item"> И прочие связанные с IT</li>
 				</ul>
 			</div>
-			<div class = "col-md-4 col-sm-12">
+			<div class = "col-md-4 col-sm-12"style = "background-color: #99ccff">
 				<h1 style = "color: #3232b9;"> Сроки</h1>
 				<p class = "text-center">
 					В зависимости от сложности работы на выполнение заказа уйдёт от 3 до 7 дней. 
@@ -46,7 +46,7 @@
 					Есть так же возможность заказать срочную работу, со сроком выполнения 1 день.
 				</p>
 			</div>
-			<div class = "col-md-4 col-sm-12">
+			<div class = "col-md-4 col-sm-12"style = "background-color: #00cc99;">
 				<h1 style = "color: #3232b9;"> Стоимость</h1>
 					<p class = "text-center">
 					В зависимости от сложности работы стоимость составит от 400р до 2000р. 
